# posexei

./: .dockerignore  .env.example  .gitignore  GEMINI.md  Makefile  OBSERVABILITY_README.md  README.md  archive.7z  compose.yaml  composer.json  implementation-plan.md  package-lock.json  package.json  tasks.md  vite.config.ts  walkthrough.md
.github/workflows/: deploy.yml
app/Models/: Organization.php  Permission.php  Role.php  SocialAccountSocialChannel.php  User.php
app/Providers/: TelemetryServiceProvider.php  TelescopeServiceProvider.php
apps/client/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
archive/: .dockerignore  boost.json  compose.yaml  composer.json  package-lock.json
archive/bootstrap/: app.php  providers.php
archive/docs/: architecture.md  infrastructure.md
archive/routes/: console.php  settings.php  web.php
database/migrations/: 2025_08_31_133135_create_organizations_table.php  2025_08_31_133136_update_columns_to_users_table.php  (+11 more)
docs/: architecture.md  development.md  infrastructure.md  observability.md  tools.md
gateway/app/: .gitignore  (+4 more)
infrastructure/: docker-compose.yaml  implementation-plan.md  task.md  walkthrough.md
routes/: console.php  settings.php  web.php
scripts/: k8s-deploy.sh
services/identity-service/: Dockerfile  main.py  pyproject.toml  worker.py
services/shared/: pyproject.toml
services/shared/shared/: queue.py  telemetry.py  utils.py  worker.py
services/social-account-service/: Dockerfile  main.py  pyproject.toml  worker.py
terraform/: outputs.tf  providers.tf  variables.tf
(+315 files in other folders)
