[project]
name = "identity"
version = "0.1.0"
description = "posexei identity service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "shared",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[tool.uv.sources]
shared = { path = "../../services/shared" }
